Added comments to code cells to avoid AI message

--- a/Module3_variables.ipynb
+++ b/Module3_variables.ipynb
@@ -43,7 +43,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/JaimeAdele/APEX/blob/main/Module3_variables.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/valeriecarr/APEX/blob/main/Module3_variables.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -79,7 +79,7 @@
         "id": "YmLWJKQSDcqe"
       },
       "source": [
-        "## 1. A couple notes before you start \n",
+        "## 1. A couple notes before you start\n",
         "* This file is view only, meaning that you can't edit it.\n",
         "    * To create an editable copy, look towards the top of the notebook and click on `Copy to Drive`. This will cause a new tab to open with your own personal copy.\n",
         "    * If you want to refer back to your copy in the future, you can find it in Google Drive in a folder called `Colab Notebooks`.\n",
@@ -92,7 +92,7 @@
         "id": "BXnvX8m8clXv"
       },
       "source": [
-        "## 2. Assigning values to variables \n",
+        "## 2. Assigning values to variables\n",
         "In Python (and other programming languages, too!), it's helpful to store values for later use. To store a value, we need to assign it to a variable.  \n",
         "  \n",
         "You can think of a variable like a box that you keep in your closet. You can drop a value into the box to store it for later, and you can also change what's being stored in the box.\n",
@@ -103,7 +103,7 @@
         "The most important rule to remember when assigning a value to a variable is as follows:  \n",
         "* The variable name always comes **first**, followed by an equal sign and then the value  \n",
         "  \n",
-        "A common mistake among students is to write the value first, which will cause a Syntax Error (i.e., an error that you've violated the \"grammar\" rules of Python). \n",
+        "A common mistake among students is to write the value first, which will cause a Syntax Error (i.e., an error that you've violated the \"grammar\" rules of Python).\n",
         "\n",
         "<font color='red'>Exercise 1</font>  \n",
         "Read through the variable assignments in the cells below. One of these cells will cause an error – can you tell which one? Run each cell to determine whether you're right."
@@ -190,7 +190,7 @@
         "id": "Z6Akz9rV_iKF"
       },
       "source": [
-        ""
+        "# Print the value assigned to age\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -211,7 +211,7 @@
         "id": "XRvLGt62r9VX"
       },
       "source": [
-        ""
+        "# Favorite number\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -228,7 +228,7 @@
         "\n",
         "\n",
         "#### <font color='blue'>Note:</font> `=` vs `==`  \n",
-        "Importantly, `=` and `==` have different meanings in Python. You learned in a previous module that `==` is a Boolean operator that returns either `True` or `False` and allows us to determine whether two values are equivalent. \n",
+        "Importantly, `=` and `==` have different meanings in Python. You learned in a previous module that `==` is a Boolean operator that returns either `True` or `False` and allows us to determine whether two values are equivalent.\n",
         "\n",
         "Today, you learned that the single `=` sign is used to assign values to variables. In other words, it is an assignment operator. See below for a simple example to illustrate the difference between the two operators:\n",
         "\n",
@@ -283,7 +283,7 @@
       },
       "source": [
         "## 4. Using Variables in Expressions  \n",
-        "As noted above, the point of creating variables is to store values for later use. For example, you could assign the value 8 to the variable `shoe_size`, and then use this variable in a mathematical expression or Boolean expression. \n",
+        "As noted above, the point of creating variables is to store values for later use. For example, you could assign the value 8 to the variable `shoe_size`, and then use this variable in a mathematical expression or Boolean expression.\n",
         "\n",
         "<font color='red'>Exercise 5</font>   \n",
         "Read the code in the cell below, and make a prediction about the result of the mathematical expression. Run the cell to check if you're correct!"
@@ -317,7 +317,7 @@
         "id": "sGyM4W_Eqm4m"
       },
       "source": [
-        ""
+        "# Divide favorite number\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -338,7 +338,7 @@
         "id": "r8mFrS37uiI0"
       },
       "source": [
-        ""
+        "# # Check equivalency\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -349,7 +349,7 @@
         "id": "9szLBjzuBU-6"
       },
       "source": [
-        "## 5. The basics of variable naming \n",
+        "## 5. The basics of variable naming\n",
         "\n",
         "When it comes to creating variable names, there are a few Python rules that must be followed to avoid a Syntax Error:\n",
         "\n",
@@ -358,7 +358,7 @@
         "* Multi-part names cannot contain spaces; instead, use an underscore. For example, `fav num` isn't a valid variable name, but `fav_num` is.\n",
         "\n",
         "<font color='red'>Exercise 8</font>  \n",
-        "With these rules in mind, think about which of the following cells you expect to cause a Syntax Error, and why. In each case, the goal is to create a variable name that represents the number of students in your class. Run each cell to determine if you're correct! "
+        "With these rules in mind, think about which of the following cells you expect to cause a Syntax Error, and why. In each case, the goal is to create a variable name that represents the number of students in your class. Run each cell to determine if you're correct!"
       ]
     },
     {
@@ -433,7 +433,7 @@
         "## 6. Reserved words\n",
         "There is a small set of reserved words with special meaning in Python. To help you make sense of what reserved words are, consider the following:\n",
         "\n",
-        "Dogs understand a small number of words in English, like treat, dinner, leash, walk, car, etc. You only use these words around a dog when you really mean it, because the dog will immediately react. \n",
+        "Dogs understand a small number of words in English, like treat, dinner, leash, walk, car, etc. You only use these words around a dog when you really mean it, because the dog will immediately react.\n",
         "\n",
         "The same thing applies to Python. You should avoid using reserved words as variable names because they have special meaning and Python will immediately spring into action.\n",
         "\n",
@@ -490,7 +490,7 @@
       },
       "source": [
         "## 7. General naming tips  \n",
-        "In addition to the rules and style preferences described above, the following are general naming tips that will make your code more readable: \n",
+        "In addition to the rules and style preferences described above, the following are general naming tips that will make your code more readable:\n",
         "* Use short variable names  \n",
         "    * Short names save space and are easier to type repeatedly  \n",
         "* Use meaningful names  \n",
@@ -502,7 +502,7 @@
         "* `n_states` is both short and meaningful\n",
         "\n",
         "<font color='red'>Exercise 9</font>  \n",
-        "Try it yourself! Imagine that you're using Python to build a text-based adventure game, and you need to create a variable to store the current score of player #1. Below, assign the value 42 to your chosen variable name. \n",
+        "Try it yourself! Imagine that you're using Python to build a text-based adventure game, and you need to create a variable to store the current score of player #1. Below, assign the value 42 to your chosen variable name.\n",
         "\n",
         "Note: As long as you don't violate any of the above rules, preferences, or tips, there are many possible correct answers to this exercise!"
       ]
@@ -513,7 +513,7 @@
         "id": "MjazK_AhxTk0"
       },
       "source": [
-        ""
+        "# Current score\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -527,7 +527,7 @@
         "## 8. Be warned: Python is literal\n",
         "Python is like a calculator: it will do exactly what you tell it to do, not what you *want* it to do. It doesn't \"know what you meant to type\" and it doesn't autocorrect.\n",
         "\n",
-        "Back to our scenario regarding the number of states in the US... \n",
+        "Back to our scenario regarding the number of states in the US...\n",
         "\n",
         "Imagine that you created the variable `n_states` and assigned it the value 50. Python will complain if you later mistype the variable when trying to use in an expression. For example, all of the following would cause errors:\n",
         "\n",
@@ -537,7 +537,7 @@
         "\n",
         "You can see that each of these differs from the original in some way – spelling, pluralization, or capitalization. All of these differences are meaningful to Python!\n",
         "\n",
-        "Note that if you create a variable and later mistype it, you'll get a Name Error, indicating that Python doesn't recognize the variable name you're attempting to use. \n",
+        "Note that if you create a variable and later mistype it, you'll get a Name Error, indicating that Python doesn't recognize the variable name you're attempting to use.\n",
         "\n",
         "<font color='red'>Exercise 10</font>  \n",
         "Using your variable name from Exercise 9 (relating to the player's score), write an expression using this variable name in which you increase the player's score by 10 points (i.e., add 10). In the first cell, write the variable name correctly. In the second cell, try changing the capitalization of one letter to see what a NameError looks like."
@@ -549,7 +549,7 @@
         "id": "EOkWfhuoMOao"
       },
       "source": [
-        "# correct name\n"
+        "# Correct name\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -560,7 +560,7 @@
         "id": "rex9pgZyrwwZ"
       },
       "source": [
-        "# incorrect name"
+        "# Incorrect name\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -572,7 +572,7 @@
         "id": "QRjGc_2gDcrY"
       },
       "source": [
-        "## Congrats, you're done! \n",
+        "## Congrats, you're done!\n",
         "Next module, we'll start learning about a new data type: strings."
       ]
     }
