Minor changes to comments

--- a/Module1_colab.ipynb
+++ b/Module1_colab.ipynb
@@ -22,7 +22,6 @@
     "colab": {
       "name": "Module1_colab.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
       "include_colab_link": true
     }
   },
@@ -34,7 +33,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/JaimeAdele/APEX/blob/main/Module1_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/valeriecarr/APEX/blob/main/Module1_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -100,14 +99,14 @@
         "* Single click on this cell so that you can see a rectangle around it\n",
         "* Hover your mouse directly over the bottom edge of the cell, in the center\n",
         "* You should see two buttons appear: One that says `+ Code` and one that says `+ Text`\n",
-        "* Click `+ Text`, which will insert a text cell below this one. \n",
+        "* Click `+ Text`, which will insert a text cell below this one.\n",
         "* For future reference: you can hover your mouse over the top edge of the cell (also in the center) to insert a new cell above, rather than below, the current cell\n",
         "\n",
         "You'll see that your new text cell is divided in two. You'll type on the left side of the cell and the right side will show you a preview of how things will look. Try it out in the next exercise.\n",
         "\n",
         "<font color='red'>Exercise 2</font>    \n",
         "* Type the answer to the following question: What's the last TV show that you watched, and what genre does it fall under (e.g., comedy, drama, reality tv, etc.)?\n",
-        "* Next, use the italic button at the top of the cell to make the name of the show italic. \n",
+        "* Next, use the italic button at the top of the cell to make the name of the show italic.\n",
         "* When you're done, hit `shift` and `enter` at the same time to \"run\" the cell. You should now see that everything looks nicely formatted!\n",
         "* If you want to go back and change anything, simply double click on the cell to make it editable, and then \"run\" the cell once you're done.\n",
         "\n",
@@ -137,7 +136,7 @@
       },
       "source": [
         "# Hello, this is heading 1\n",
-        "## And this is heading 2 "
+        "## And this is heading 2"
       ]
     },
     {
@@ -166,7 +165,7 @@
         "id": "vBulYdtneCj4"
       },
       "source": [
-        "### 3b. Formatting text to look like code \n",
+        "### 3b. Formatting text to look like code\n",
         "You can also format individual words or larger chunks of text to appear as code. For example, here, the words `shift` and `enter` are formatted as code by putting an accent mark on both sides of the words. (The accent mark is directly to the left of the number `1` key on your keyboard).\n",
         "\n",
         "To format a large chunk of text to look like code, you can wrap it between two sets of three accent marks. This approach can be useful when providing example code in a Colab notebook.\n",
@@ -186,7 +185,7 @@
       },
       "source": [
         "### 3c. Bold and italic\n",
-        "To make a word **bold**, you could use the B button among the formatting tools, or you could surround the word on both sides with two asterisks. To make a word *italic*, surround it on both sides with a single asterisk. \n",
+        "To make a word **bold**, you could use the B button among the formatting tools, or you could surround the word on both sides with two asterisks. To make a word *italic*, surround it on both sides with a single asterisk.\n",
         "\n",
         "<font color='red'>Exercise 7</font>  \n",
         "To practice writing text that includes bold and italic words, double click on this cell, insert a new line, and write a sentence of your choosing. Rather than use buttons, you should instead use asterisks to make a word bold, and another italic. Hit `shift` + `enter` once you're done."
@@ -199,7 +198,7 @@
       },
       "source": [
         "### 3d. Bulleted lists\n",
-        "Bulleted lists can be created in text cells using a single asterisk at the start of line, followed by a space. You can then start another new line, and repeat the process. To indent a bullet point, simply hit tab, and then proceed as usual. \n",
+        "Bulleted lists can be created in text cells using a single asterisk at the start of line, followed by a space. You can then start another new line, and repeat the process. To indent a bullet point, simply hit tab, and then proceed as usual.\n",
         "\n",
         "<font color='red'>Exercise 8</font>  \n",
         "Double click on this cell to see how things are done.\n",
@@ -210,7 +209,7 @@
         "        * My fourth point is even more indented\n",
         "* My fifth point is not\n",
         "\n",
-        "Once you understand, \"run\" this cell to return to the nicely formatted view. \n",
+        "Once you understand, \"run\" this cell to return to the nicely formatted view.\n",
         "\n",
         "<font color='red'>Exercise 9</font>  \n",
         "Next, insert a *new* text cell below to practice creating a bulleted list, including indentation. Specifically, create a list of the top three places you want to visit most in the future. Hit `shift` + `enter` once you're done."
@@ -222,8 +221,8 @@
         "id": "ZHi0IQVh6i1e"
       },
       "source": [
-        "### 3e. Links \n",
-        "For the sake of time, we'll stick to using the link formatting button to create a link. \n",
+        "### 3e. Links\n",
+        "For the sake of time, we'll stick to using the link formatting button to create a link.\n",
         "\n",
         "<font color='red'>Exercise 10</font>  \n",
         "Start by double clicking on this cell, and then highlight the word Google and click on the link button. You should see a new section highlighted in gray. Immediately after the two slashes in this gray section, type `google.com`. In brief, the word that's now in brackets will be highlighted in blue, and the URL in parentheses is where you'll go if you click on the link. Finally, run the cell by hitting `shift` + `enter`."
@@ -238,7 +237,7 @@
         "### 3f. New lines\n",
         "\n",
         "<font color='red'>Exercise 11</font>  \n",
-        "Insert a new text cell below and then write the word `hello` in regular text (i.e., don't use a pound sign). Then, hit enter to start a new line, and type the word `goodybe`. Look at your preview to the right. Everything was on the same line, right? To fix this issue, put two spaces at the end of the line with `hello`. Now each word should be on its own line in the preview. Hit `shift` + `enter` to run the cell."
+        "Insert a new text cell below and then write the word `hello` in regular text (i.e., don't use a pound sign). Then, hit enter to start a new line, and type the word `goodybe`. Look at your preview to the right. Everything was on the same line, right? To fix this issue, you need to hit enter again (i.e., two enters in total). Now each word should be on its own line in the preview. Hit `shift` + `enter` to run the cell."
       ]
     },
     {
@@ -264,7 +263,7 @@
       },
       "source": [
         "## 4. Practice with code cells\n",
-        "In this portion of this tutorial, we'll learn how to write code by using Python as a calculator. \n",
+        "In this portion of this tutorial, we'll learn how to write code by using Python as a calculator.\n",
         "\n",
         "<font color='red'>Exercise 13</font>    \n",
         "Insert a code cell below, and write a simple mathematical problem. If you're curious, you can use the `*` symbol for multiplication and the `/` symbol for division. Finally, run your cell; you should see the output immediately underneath the cell."
@@ -276,7 +275,7 @@
         "id": "PGKDsDC2eh-w"
       },
       "source": [
-        "Note that code cells can also contain **comments**, which are lines of text that are *not* evaluated as code. Comments are used to write brief notes about specific lines of code, and are preceded by the `#` symbol. In the example below I've included a comment and some code. \n",
+        "Note that code cells can also contain **comments**, which are lines of text that are *not* evaluated as code. Comments are used to write brief notes about specific lines of code, and are preceded by the `#` symbol. In the example below I've included a comment and some code.\n",
         "\n",
         "<font color='red'>Exercise 14</font>  \n",
         "Run the cell to see what happens."
@@ -292,7 +291,7 @@
         "outputId": "4ed693e0-0a99-4e49-80d9-4b459bb13687"
       },
       "source": [
-        "# This is a comment: 10 - 5\n",
+        "# Subtraction code\n",
         "10 - 2"
       ],
       "execution_count": null,
@@ -315,7 +314,7 @@
         "id": "ffBjaTBSnhGI"
       },
       "source": [
-        "As you can see, the calculation in the *comment* wasn't actually run -- only the calculation in the code itself. \n",
+        "As you can see, the comment was ignored by Python.\n",
         "\n",
         "<font color='red'>Exercise 15</font>    \n",
         "Insert a new code cell below, and write a comment and a simple calculation underneath it. Run your cell to see the result."
@@ -356,7 +355,7 @@
       },
       "source": [
         "## All done!\n",
-        "You now know the basics of creating and updating Colab notebooks! In Module 2, we will begin learning the basics of programming in Python. "
+        "You now know the basics of creating and updating Colab notebooks! In Module 2, we will begin learning the basics of programming in Python."
       ]
     }
   ]
