Minor changes to instructions

--- a/Module2_datatypes.ipynb
+++ b/Module2_datatypes.ipynb
@@ -128,7 +128,7 @@
         "* Division:  \n",
         "`482 / 16`  \n",
         "  \n",
-        "* Exponentiation:  \n",
+        "* Exponents (squared, cubed, etc.):  \n",
         "`4 ** 2`\n",
         "  \n",
         "* Quotients, i.e., the number of times one integer can be divided by another:   \n",
@@ -465,7 +465,7 @@
         "id": "qWi1OQIlDcq5"
       },
       "source": [
-        "# Complex Boolean\n"
+        "# Write your own Boolean expression\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -486,7 +486,7 @@
         "id": "UwWSKVe4Dcq8"
       },
       "source": [
-        "# Another complex Boolean\n"
+        "# Write your own Boolean expression II\n"
       ],
       "execution_count": null,
       "outputs": []
