Added comments to avoid AI message

--- a/Module4_strings.ipynb
+++ b/Module4_strings.ipynb
@@ -22,7 +22,6 @@
     "colab": {
       "name": "Module4_strings.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
       "include_colab_link": true
     }
   },
@@ -34,7 +33,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/JaimeAdele/APEX/blob/main/Module4_strings.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/valeriecarr/APEX/blob/main/Module4_strings.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -70,7 +69,7 @@
         "id": "LiPDUmfw3Np7"
       },
       "source": [
-        "## 1. A couple notes before you start \n",
+        "## 1. A couple notes before you start\n",
         "* This file is view only, meaning that you can't edit it.\n",
         "    * To create an editable copy, look towards the top of the notebook and click on `Copy to Drive`. This will cause a new tab to open with your own personal copy.\n",
         "    * If you want to refer back to your copy in the future, you can find it in Google Drive in a folder called `Colab Notebooks`.\n",
@@ -176,6 +175,7 @@
         "id": "loYySOlczweL"
       },
       "source": [
+        "# Determine type\n",
         "answer = 'yes'"
       ],
       "execution_count": null,
@@ -204,12 +204,12 @@
         "* 'My phone number is 555-123-4567'\n",
         "* '@#?!'\n",
         "\n",
-        "You may be wondering why there are quote marks around each of these examples... \n",
+        "You may be wondering why there are quote marks around each of these examples...\n",
         "\n",
         "Quote marks are how we tell Python: this is a string! Python doesn't care if you use single or double quotes around strings. Throughout these modules, we'll use single quotes, but the choice is entirely up to you – neither is more correct than the other, and there is no standard preference in the field. The important thing is to stay consistent (i.e., pick single or double quotes and stick with that choice).  \n",
         "\n",
         "<font color='red'>Exercise 3</font>  \n",
-        "Below you'll see two separate cells, each of which contains the number 13.2. In the first cell, there are no quote marks, and in the second, there are quote marks. What impact does this have? These are two different data types! \n",
+        "Below you'll see two separate cells, each of which contains the number 13.2. In the first cell, there are no quote marks, and in the second, there are quote marks. What impact does this have? These are two different data types!\n",
         "\n",
         "To check, use the `type()` function on the values in the cells below. In other words, put the values below inside the parentheses of the `type()` function."
       ]
@@ -220,6 +220,7 @@
         "id": "odVJJoviuHAI"
       },
       "source": [
+        "# Type?\n",
         "13.2"
       ],
       "execution_count": null,
@@ -231,6 +232,7 @@
         "id": "GS28keRruJe_"
       },
       "source": [
+        "# Type?\n",
         "'13.2'"
       ],
       "execution_count": null,
@@ -252,6 +254,7 @@
         "id": "8CJIg1XouTgH"
       },
       "source": [
+        "# What will happen?\n",
         "13.2 / 2"
       ],
       "execution_count": null,
@@ -263,6 +266,7 @@
         "id": "3gSnTWSLuVH2"
       },
       "source": [
+        "# What will happen?\n",
         "'13.2' / 2"
       ],
       "execution_count": null,
@@ -284,9 +288,9 @@
       },
       "source": [
         "<font color='red'>Exercise 5</font>  \n",
-        "As mentioned above, you can indicate that a value is a string by using single or double quotes around it. However, you must use quotes! \n",
+        "As mentioned above, you can indicate that a value is a string by using single or double quotes around it. However, you must use quotes!\n",
         "\n",
-        "Below, try assigning the variable `fav_drink` the name of your favorite type of drink (coffee, tea, boba, etc.), but don't use quotes around the drink name. Run the cell and see what happens."
+        "Below, try assigning the variable `fav_drink` the name of your favorite type of drink (coffee, tea, boba, etc.), but **don't** use quotes around the drink name. Run the cell and see what happens."
       ]
     },
     {
@@ -295,7 +299,7 @@
         "id": "tW9Lmjd-zweZ"
       },
       "source": [
-        ""
+        "# Favorite drink\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -330,6 +334,7 @@
         "id": "Ndidu8Bbzwec"
       },
       "source": [
+        "# Print me\n",
         "econ = 'An abbreviation for economics is econ'"
       ],
       "execution_count": null,
@@ -354,7 +359,7 @@
         "id": "u-UokTf6vCCd"
       },
       "source": [
-        "# assign a value\n",
+        "# Assign a value\n",
         "my_string = 'hello'"
       ],
       "execution_count": null,
@@ -366,7 +371,7 @@
         "id": "_TM3MofivCuM"
       },
       "source": [
-        "# test for equality\n",
+        "# Test for equality\n",
         "my_string == 'hello'"
       ],
       "execution_count": null,
@@ -378,7 +383,7 @@
         "id": "0jP0435IvEDW"
       },
       "source": [
-        "# test for inequality\n",
+        "# Test for inequality\n",
         "my_string != 'hello'"
       ],
       "execution_count": null,
@@ -445,7 +450,7 @@
         "id": "qyh_CZUxvTcS"
       },
       "source": [
-        ""
+        "# Dog vs dog\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -456,8 +461,8 @@
         "id": "1JrH4q_avVuK"
       },
       "source": [
-        "## 7. Comparison operators: Less than and greater than \n",
-        "You might have assumed that it's impossible to determine whether one string is greater or less than the other. However, Python uses `<` and `>` as a means of determining aphabetical order of strings. \n",
+        "## 7. Comparison operators: Less than and greater than\n",
+        "You might have assumed that it's impossible to determine whether one string is greater or less than the other. However, Python uses `<` and `>` as a means of determining lexicographical order of strings (for our purposes, you can think of this as alphabetical order).\n",
         "\n",
         "Think of < as meaning “appears before” and > as meaning “appears after” with respect to alphabetical order. For example `'apple' < 'banana'` would return `True` because apple appears before banana in the alphabet.\n",
         "\n",
