Added comments to avoid AI message

--- a/Module5_string_operations.ipynb
+++ b/Module5_string_operations.ipynb
@@ -22,7 +22,6 @@
     "colab": {
       "name": "Module5_string_operations.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
       "include_colab_link": true
     }
   },
@@ -34,7 +33,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/JaimeAdele/APEX/blob/main/Module5_string_operations.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/valeriecarr/APEX/blob/main/Module5_string_operations.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -68,7 +67,7 @@
         "id": "LiPDUmfw3Np7"
       },
       "source": [
-        "## 1. A couple notes before you start \n",
+        "## 1. A couple notes before you start\n",
         "* This file is view only, meaning that you can't edit it.\n",
         "    * To create an editable copy, look towards the top of the notebook and click on `Copy to Drive`. This will cause a new tab to open with your own personal copy.\n",
         "    * If you want to refer back to your copy in the future, you can find it in Google Drive in a folder called `Colab Notebooks`.\n",
@@ -129,6 +128,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Adding toppings\n",
         "top1 = 'artichokes'\n",
         "top2 = 'olives'\n"
       ],
@@ -184,7 +184,7 @@
         "id": "GfAEuFQCtqfB"
       },
       "source": [
-        ""
+        "# Multiple copies\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -198,7 +198,7 @@
         "## 3. Checking the contents of a string\n",
         "It's often helpful to check whether a string contains a particular character or set of characters. For example, can the word `disgusting` be found in the larger sentence `Pizza is delicious`?\n",
         "\n",
-        "To check the contents of a string, Python uses the keywords `in` and `not in` within a Boolean expression, such that the result is either `True` or `False`. \n",
+        "To check the contents of a string, Python uses the keywords `in` and `not in` within a Boolean expression, such that the result is either `True` or `False`.\n",
         "\n",
         "The general syntax is as follows:\n",
         "\n",
@@ -206,7 +206,7 @@
         "`'char' not in my_str`\n",
         "\n",
         "<font color='red'>Exercise 5</font>  \n",
-        "Run the cell below to see a simple demonstration of this concept. "
+        "Run the cell below to see a simple demonstration of this concept."
       ]
     },
     {
@@ -249,7 +249,7 @@
         "id": "0wOM2a26tiI7"
       },
       "source": [
-        ""
+        "# Is the force with you?\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -313,7 +313,7 @@
       "source": [
         "---\n",
         "\n",
-        "#### <font color='blue'>Note:</font> What counts as a character? \n",
+        "#### <font color='blue'>Note:</font> What counts as a character?\n",
         "Python considers all of the following to be characters and will thus count them in the total length of the string:\n",
         "* Letters\n",
         "* Numbers\n",
@@ -335,7 +335,7 @@
         "<font color='red'>Exercise 8</font>  \n",
         "In the cell below, start by creating the variable `school` and assign it the name of your institution as a string. Don't simply write the acronym (e.g., SJSU), but rather spell out the full name (e.g., San Jose State University).\n",
         "\n",
-        "Then, in the same cell, insert a new line and determine the length of the string assigned to `school`. "
+        "Then, in the same cell, insert a new line and determine the length of the string assigned to `school`."
       ]
     },
     {
@@ -344,7 +344,7 @@
         "id": "x_GkEXc_tX3q"
       },
       "source": [
-        ""
+        "# School length\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -362,7 +362,7 @@
         "---\n",
         "\n",
         "\n",
-        "#### <font color='blue'>Note:</font> Indexing starts at 0 \n",
+        "#### <font color='blue'>Note:</font> Indexing starts at 0\n",
         "Unlike human counting, Python indexing starts at 0 instead of 1. This means that the first character in a string has an index of 0, the second character has an index of 1, the third character has an index of 2, etc. See the table below for a visual representation of the index of each character in a simple string:\n",
         "\n",
         "<table>\n",
@@ -424,9 +424,9 @@
       },
       "source": [
         "<font color='red'>Exercise 10</font>  \n",
-        "In the cell below, create the variable `birthplace` and assign it a short string that states where you were born. For example, `'I was born in the Phillipines.'` \n",
+        "In the cell below, create the variable `birthplace` and assign it a short string that states where you were born. For example, `'I was born in the Phillipines.'`\n",
         "\n",
-        "Then, write code that will print the first and fourth character of this string. Reminder: Python starts indexing at zero, so when we say \"the first character in the string\", we mean the character at index 0. "
+        "Then, write code that will print the first and fourth character of this string. Reminder: Python starts indexing at zero, so when we say \"the first character in the string\", we mean the character at index 0."
       ]
     },
     {
@@ -435,7 +435,7 @@
         "id": "HuBvXPXotNOd"
       },
       "source": [
-        ""
+        "# Birthplace\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -447,7 +447,7 @@
       },
       "source": [
         "## 6. Negative indexing  \n",
-        "The process described above is \"normal\" or \"forward\" indexing. Using this approach, the very first character (i.e., the character that is furthest left) is at index 0, and the numbers increase from there. \n",
+        "The process described above is \"normal\" or \"forward\" indexing. Using this approach, the very first character (i.e., the character that is furthest left) is at index 0, and the numbers increase from there.\n",
         "\n",
         "Python also allows for \"negative\" or \"backward\" indexing. With this approach, we start with the very last character (i.e., the character that is furthest right). This character has an index of -1. Moving left, the second to last character has an index of -2, the third to last character has an index of -3, etc. See the table below for a visual representation of both normal and negative indexing for a simple string:\n",
         "\n",
@@ -488,7 +488,7 @@
         "id": "AssvT_n7tJLF"
       },
       "source": [
-        ""
+        "# Birthplace (negative)\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -499,8 +499,8 @@
         "id": "D7zKiWBqtGe8"
       },
       "source": [
-        "## Congrats, you're done! \n",
-        "In this module, we've finished our discussion of strings. If you'd like more practice with string operations, try out the [bonus exercises](https://colab.research.google.com/github/JaimeAdele/APEX/blob/main/Module5_string_operations_bonus_exercises.ipynb) for this module. \n",
+        "## Congrats, you're done!\n",
+        "In this module, we've finished our discussion of strings. If you'd like more practice with string operations, try out the [bonus exercises](https://colab.research.google.com/github/JaimeAdele/APEX/blob/main/Module5_string_operations_bonus_exercises.ipynb) for this module.\n",
         "\n",
         "Otherwise, continue to the next module to learn about two new data types: lists and tuples!"
       ]
