Added comments to avoid AI message

--- a/Module10_your_own_data.ipynb
+++ b/Module10_your_own_data.ipynb
@@ -98,7 +98,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Import library\n"
+      ],
       "metadata": {
         "id": "1_5kXC9bolph"
       },
@@ -212,12 +214,12 @@
     {
       "cell_type": "code",
       "source": [
-        "# replace the URL with your own\n",
+        "# Replace the URL with your own\n",
         "filename = 'https://raw.githubusercontent.com/bla/bla/bla'\n",
         "\n",
-        "# read in file as dataframe\n",
+        "# Read in file as dataframe\n",
         "\n",
-        "# view header\n"
+        "# View header\n"
       ],
       "metadata": {
         "id": "qNMHnpYdVsd8"
@@ -380,7 +382,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Define filepath\n"
+      ],
       "metadata": {
         "id": "KBSNzo6Hwd15"
       },
@@ -404,7 +408,11 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Read CSV\n",
+        "\n",
+        "# Check header\n"
+      ],
       "metadata": {
         "id": "g44wB0TPxZdd"
       },
